# www.letty

./: .gitignore  README.md  data.yml  index.css  pyproject.toml  setup-env  setup.cfg
manage_site/: generate.py  model.py
scripts/: lint
src/manage_site/: generate.py  meta.py
