# This file contains general configuration files for thirdparty
# tools like linters, code formatters, type checkers, etc.
#
# See https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/

[build-system]
requires = [
  'setuptools==60.5.0',
  'wheel==0.37.1',
]
build-backend = 'setuptools.build_meta'

[tool.black]
# Black is a Python code formatter
# https://black.readthedocs.io/en/stable/
line-length = 100

[tool.mypy]
# Mypy is a Python type checker
# https://mypy.readthedocs.io/en/stable/index.html

python_version = 3.9

files = [
  'src/',
]

# Make error behavior a little more user friendly (at the expense of
# some runtime slowdown?)
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

# These flags are equivalent to running mypy in "--strict" mode
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
