[metadata]
name = manage_site
version = 0.1.0
description = TODO
long_description = file: README.md
maintainer = Letitia Ho
maintainer_email = letitiayhho@gmail.com
url = https://github.com/keggsmurph21/www.letty
license = TODO

[options]
# We need to keep this in sync with `$LETTY_PYTHON`
# defined in "setup-env".
python_requires =
  == 3.9.*

# Note that the current best practice is to only list
# "abstract dependencies" (i.e., packages not pinned
# to specific versions) here.  Since we don't need to
# support being used as a "library" by other packages,
# we don't have to care about this, and so we can get
# away with pinning everything.  Otherwise, we'd need
# to maintain a separate file that just contained the
# pinned versions.
#
# See also: https://packaging.python.org/discussions/install-requires-vs-requirements/
# See also: https://caremad.io/posts/2013/07/setup-vs-requirement/
install_requires =
  Jinja2>=3.0.3
  PyYAML>=6.0

# Make sure when we install our package, we unpack it
# into a directory.  This is less bug-prone when working
# with "data files" and also easier to debug in-situ.
#
# See https://setuptools.readthedocs.io/en/latest/userguide/miscellaneous.html#setting-the-zip-safe-flag
zip_safe = False

# Boilerplate for making sure setuptools can handle
# our package living in "src/manage_site/".
package_dir =
  = src
packages = find:

[options.packages.find]
where = src

# These are dependencies we only care about during
# development.
#
# See also: https://setuptools.readthedocs.io/en/latest/userguide/dependency_management.html#optional-dependencies
[options.extras_require]
dev =
  black>=21.12b0
  build>=0.7.0
  flake8>=4.0.1
  mypy>=0.931
  types-PyYAML==5.4.6

# Make it easy to "call" our functionality from the command line.
#
# See also: https://setuptools.readthedocs.io/en/latest/userguide/entry_point.html#entry-points
[options.entry_points]
console_scripts =
  generate-site = manage_site.generate:main

[flake8]
# Flake8 is a Python linter.
#
# Sadly, this tool doesn't allow us to store configuration in
# 'pyproject.toml' like everything else :(
#
# See also: https://flake8.pycqa.org/en/latest
# See also: https://github.com/PyCQA/flake8/issues/234

max-line-length = 100

filename =
  src/**/*.py

# If you add new "ignore" items, make sure to document the error/warning
# numbers for future reference!
ignore =
  # whitespace before ":"
  E203,
  # module level import not at top of file
  E402,
  # line too long (>80)
  E501,
  # line break before binary operator
  W503
